--- a/Final Dissertation/2_main_body/introduction.tex
+++ b/Final Dissertation/2_main_body/introduction.tex
@@ -4,7 +4,9 @@
 \section{Motivation}
 \label{sec:intro_motiv}
 
-The specific subject of this dissertation is X. But the big problem it has is Y, specifically theses details.
+Mastermind is a codebreaking game played between two players each with opposing goals. The game was originally a board game which would utilise plastic pegs on a board to represent codes and other elements of the gameplay, a brief description of how the game functions is as follows. The code-maker (CM) is tasked with constructing a hidden-code (HC) within the boundaries of set parameters. These parameters can be defined as a length l which the HC must exactly match in it's number of present symbols and a set of symbols s which is used to construct the HC. In the standard variant of the game the length is four symbols whilst the set consists of six symbols of which repeats can be present within the HC.
+
+The code-breaker (CB) is the role designated to the player that is tasked with discovering the contents and arrangement of the HC. This processs involves the CB attemtping guesses at what they believe the HC should be while refining their guesses based on responses given by the CM as to the accuracy of each guess. These responses utilise two metrics to judge the accuracy of a guess. The first metric in a response are white pegs which symbolise that a symbol in the current guess is present within the HC but has been arranged in an incorrect position. The second metric are black pegs which represent a symbol in the guess which is present within the HC and is also in an identical position in both the guess and the HC.
 
 \section{Aim and Objectives}
 \label{sec:intro_aim}
